--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,13 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start-server": "npm run compile && node ./dist/index.js"
+    "start-server": "npm run compile && node ./dist/main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
@@ -21,7 +22,9 @@
   },
   "devDependencies": {
     "@types/koa": "^2.13.6",
+    "@types/koa__cors": "^4.0.0",
     "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa-cors": "^0.0.2",
     "@types/koa-json": "^2.0.20",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^20.3.2",
