--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vuepic/vue-datepicker": "^5.3.0",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
